--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ ul li a {
 	<div class="bottom_row">
 
 	<a href="slope/index.html"><img class="wordle" src="slope.jpeg" alt="slope"></a>
-	<a href="xx142-b2exe/index.html"><img class="wordle" src="idk.jpg" alt="wordle"></a>
+	<a href="survevio.html"><img class="wordle" src="survev.jpg" alt="wordle"></a>
 	<a href="bitlife/index.html"><img class="wordle" src="bitlife/logo.png" alt="bitlife"></a>
 	
 	</div>
