Adding Pixels Transfer

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ ul li a {
 			
 			text-align:center;
 			padding-top:80px;
-			padding-top:150px
+
 			
 			/*Replace this code after removing Nidhin Ad*/
 			
@@ -348,6 +348,15 @@ ul li a {
 			text-align:center;
 			
 		}
+
+		.pixels{
+
+			text-align:center;
+		}
+		.pixels img {
+			margin-top:130px;
+			height:420px;
+		}
 		
 		
 		
@@ -378,17 +387,17 @@ ul li a {
 
 			</div>
 
-<!--
+
 	
-	<div class="nidhin">
+	<div class="pixels">
 		
-		<img class="nidhin_img" src="nidhin.png">
-		
-		<h3 class="nidhin_text"> Contact Gras2027 Creator For Advertisements For The Upcoming Election!!!</h3>
+		<a href="https://arc2027.vercel.app"><img class="pixels_img" src="pixels_transfer.png"></a>
 		
 		</div>
 	
-		-->
+
+
+
 	
 	
 	
